syntax = "proto3";
package DomainServices.CaseService;
option csharp_namespace = "DomainServices.CaseService.Contracts";

import "PaginationRequest.proto";
import "PaginationResponse.proto";
import "Messages/Case.proto";

message SearchCasesRequest {
	// v33id majitele Case - povinne
	int32 CaseOwnerUserId = 1;

	// Pozadovany status Case - nepovinne
	repeated int32 State = 2;

	// Fulltext hledani - nepovinne
	string SearchTerm = 3;
	
	// Nastaveni strankovani
	cis.types.PaginationRequest Pagination = 4;
}

message SearchCasesResponse {
	// Kolekce nalezenych Case s ohledem na strankovani
	repeated Case Cases = 1;
	
	cis.types.PaginationResponse Pagination = 2;
}